--- a/styles.css
+++ b/styles.css
@@ -168,3 +168,84 @@
     font-size: 12px;
    
 }
+
+
+
+.collections h1{
+    font-weight: 600;
+}
+
+.sub__heading_container{
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.sub__heading_container span:nth-child(2){
+    color: #ff7e8b;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.collections_card_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-top: 1.5rem;
+}
+
+.card{
+    height: 300px;
+    min-width: 240px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    position: relative;
+}
+
+.card1{
+    background-image: url('images/collection1.jpg');
+}
+
+.card2 {
+    background-image: url('images/collection2.jpg');
+}
+
+
+.card3 {
+    background-image: url('images/collection3.jpg');
+}
+
+
+.card4 {
+    background-image: url('images/collection4.jpg');
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    background: linear-gradient(0deg, rgba(7, 7, 7, 1) 0%, rgba(11, 11, 11, 0.4052871148459384) 27%, rgba(0, 0, 0, 0.1) 37%, rgba(7, 7, 7, 0) 100%);
+}
+
+.content{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: white;
+    padding: 12px 16px;
+    font-size: 0.9rem;
+}
+
+.content h4{
+    font-weight: 400;
+    letter-spacing: 0.5px;
+}
