--- a/styles.css
+++ b/styles.css
@@ -405,6 +405,7 @@
     justify-content: space-between;
     width: 80%;
     margin: auto;
+    flex-wrap: wrap;
 }
 
 .footer_section1 img{
@@ -428,4 +429,89 @@
         justify-content: center;
         gap: 10px;
         cursor: pointer;
+}
+
+.navigation_container{
+    display: grid;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
+    grid-template-columns: repeat(5, 1fr);
+    width: 80%;
+    margin: auto;
+    gap: 1rem;
+    padding: 3rem 0;
+}
+
+.link__container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.link__container h5{
+    font-weight: 500;
+    font-size: 15px;
+    margin-bottom: 5px;
+    letter-spacing: 0.8px;
+}
+
+.footer__link{
+    color: gray;
+    text-decoration: none;
+    font-size: 13px;
+    font-weight: 300;
+}
+
+.footer__link:hover{
+    color: black;
+}
+
+
+.social__links_container button{
+    background-color: black;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+}
+
+
+.social__links_container button i{
+    color: white;
+    font-size: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer__section_logos{
+    width: 100%;
+}
+
+@media only screen and (max-width: 900px){
+    .navigation_container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .navigation_container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+
+
+@media only screen and (max-width: 300px) {
+    .navigation_container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+.disclaimer{
+    width: 95%;
+    margin: auto;
+    color: gray;
+    border-top: 1px solid gray;
+    padding-top: 1rem;
 }
